--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -319,7 +319,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="Like us on Facebook"
+                    android:text="Like me on Facebook"
                     android:id="@+id/textView28"
                     android:gravity="center_vertical"
                     android:textSize="17dp"
