--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -46,7 +46,8 @@
             android:background="@drawable/bg_queryinput_border"
             android:hint="Search.."
             android:paddingLeft="15dp"
-            android:textCursorDrawable="@null"/>
+            android:textCursorDrawable="@null"
+            android:singleLine="true" />
 
         <ListView
             android:layout_width="wrap_content"
